@@ -110,11 +110,35 @@ METHODS
 
     $p = Atomic::Pipe->from_fh($fh)
 
+    $p = Atomic::Pipe->from_fh($mode, $fh)
+
       Create an instance around an existing filehandle (A clone of the
       handle will be made and kept internally).
 
-      This will fail if the handle is not a pipe. This constructor will
-      determine the mode (reader or writer) for you from the given handle.
+      This will fail if the handle is not a pipe.
+
+      If no mode is provided this constructor will determine the mode
+      (reader or writer) for you from the given handle. Note: This works on
+      linux, but not BSD or Solaris, on most platforms your must provide a
+      mode.
+
+      Valid modes:
+
+      '>&'
+
+	Write-only.
+
+      '>&='
+
+	Write-only and reuse fileno.
+
+      '<&'
+
+	Read-only.
+
+      '<&='
+
+	Read-only and reuse fileno.
 
     $p = Atomic::Pipe->from_fd($mode, $fd)
 
