@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix takeover for non-linux platforms
+
 0.006     2020-12-09 22:53:06-08:00 America/Los_Angeles
 
     - Make it possible to takeover an existing pipe
